--- a/advisor/templates/result.html
+++ b/advisor/templates/result.html
@@ -96,10 +96,10 @@
                     <a href="https://www.flipkart.com/search?q=laptop" target="_blank" class="btn btn-light">
                         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Flipkart_logo.svg/200px-Flipkart_logo.svg.png" alt="Flipkart">
                     </a>
-                    <a href="https://www.croma.com/search?q=laptop" target="_blank" class="btn btn-light">
+                    <a href="https://www.croma.com/searchB?q=laptop%3Arelevance&text=laptop" target="_blank" class="btn btn-light">
                         <img src="https://images.seeklogo.com/logo-png/44/1/croma-logo-png_seeklogo-447137.png" alt="Croma">
                     </a>
-                    <a href="https://www.reliancedigital.in/search?q=laptop" target="_blank" class="btn btn-light">
+                    <a href="https://www.reliancedigital.in/collection/laptops?internal_source=navigation&page_no=1&page_size=12&page_type=number&q=laptop" target="_blank" class="btn btn-light">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Reliance_Digital.svg/220px-Reliance_Digital.svg.png" alt="Reliance Digital">
                     </a>
                 </div>
